--- a/02_Ch_3_Inner_Products_and_Norms/.047-transformer-case-study.ipynb
+++ b/02_Ch_3_Inner_Products_and_Norms/.047-transformer-case-study.ipynb
@@ -12,10 +12,10 @@
    },
    "source": [
     "---\n",
-    "title: Understanding Transformers\n",
-    "subject: Applied Linear Algebra\n",
-    "subtitle: Building intuition for Attention Mechanisms\n",
-    "short_title: Understanding Transformers\n",
+    "title: \"3.3 Case Study: ChatGPT, Transformers, and Inner Products\"\n",
+    "subject: Inner Products and Norms\n",
+    "subtitle: Attention mechanisms are fancy inner products\n",
+    "short_title: \"3.3 Case Study: ChatGPT and Inner Products\"\n",
     "authors:\n",
     "  - name: Renukanandan Tumu\n",
     "    affiliations:\n",
@@ -647,7 +647,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
