--- a/02_Ch_3_Inner_Products_and_Norms/041-inner.ipynb
+++ b/02_Ch_3_Inner_Products_and_Norms/041-inner.ipynb
@@ -12,10 +12,10 @@
    },
    "source": [
     "---\n",
-    "title: Inner Products and Induced Norms\n",
+    "title: 3.1 Inner Products and Induced Norms\n",
     "subject: Inner Products and Norms\n",
-    "subtitle: Generalizing dot products and lengths\n",
-    "short_title: Inner Products and Induced Norms\n",
+    "subtitle: Dot products and lengths in general vector spaces\n",
+    "short_title: 3.1 Inner Products and Induced Norms\n",
     "authors:\n",
     "  - name: Nikolai Matni\n",
     "    affiliations:\n",
@@ -445,7 +445,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
