--- a/02_Ch_3_Inner_Products_and_Norms/042-angle.ipynb
+++ b/02_Ch_3_Inner_Products_and_Norms/042-angle.ipynb
@@ -12,10 +12,10 @@
    },
    "source": [
     "---\n",
-    "title: Angles and the Cauchy–Schwarz Inequality\n",
+    "title: 3.2 Angles and the Cauchy–Schwarz Inequality\n",
     "subject: Inner Products and Norms\n",
-    "subtitle: angle between vectors\n",
-    "short_title: Angles\n",
+    "subtitle: Computing angles between general vectors\n",
+    "short_title: 3.2 Angles\n",
     "authors:\n",
     "  - name: Nikolai Matni\n",
     "    affiliations:\n",
@@ -435,7 +435,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
