--- a/02_Ch_3_Inner_Products_and_Norms/044-clustering.ipynb
+++ b/02_Ch_3_Inner_Products_and_Norms/044-clustering.ipynb
@@ -5,10 +5,10 @@
    "metadata": {},
    "source": [
     "---\n",
-    "title: Clustering and the K-Means Algorithm\n",
+    "title: 3.5 Clustering and the K-Means Algorithm\n",
     "subject: Inner Products and Norms\n",
-    "subtitle: Grouping vectors together\n",
-    "short_title: Clustering and K-Means\n",
+    "subtitle: An example of unsupervised machine learning\n",
+    "short_title: 3.5 Clustering and K-Means\n",
     "authors:\n",
     "  - name: Nikolai Matni\n",
     "    affiliations:\n",
@@ -376,7 +376,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
