--- a/02_Ch_3_Inner_Products_and_Norms/043-distance_nearest_neighbhors.ipynb
+++ b/02_Ch_3_Inner_Products_and_Norms/043-distance_nearest_neighbhors.ipynb
@@ -5,10 +5,10 @@
    "metadata": {},
    "source": [
     "---\n",
-    "title: Distance and Nearest Neighbors\n",
+    "title: 3.4 Distance and Nearest Neighbors\n",
     "subject: Inner Products and Norms\n",
-    "subtitle: Measuring how close two vectors are\n",
-    "short_title: Distance and Nearest Neighbors\n",
+    "subtitle: Howdy neighbor!\n",
+    "short_title: 3.4 Distance and Nearest Neighbors\n",
     "authors:\n",
     "  - name: Nikolai Matni\n",
     "    affiliations:\n",
@@ -286,7 +286,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
