--- a/02_Ch_3_Inner_Products_and_Norms/045-handwritten_digits.ipynb
+++ b/02_Ch_3_Inner_Products_and_Norms/045-handwritten_digits.ipynb
@@ -5,10 +5,10 @@
    "metadata": {},
    "source": [
     "---\n",
-    "title: \"Case Study: Handwritten Digit Recognition with K-Means\"\n",
+    "title: \"3.6 Case Study: Handwritten Digit Recognition with K-Means\"\n",
     "subject: Inner Products and Norms\n",
-    "subtitle: \n",
-    "short_title: \"Case Study: Handwritten Digit Recognition with K-Means\"\n",
+    "subtitle: Computing distances between handwritten numbers\n",
+    "short_title: \"3.6 Case Study: Handwritten Digit Recognition with K-Means\"\n",
     "authors:\n",
     "  - name: Nikolai Matni\n",
     "    affiliations:\n",
@@ -283,7 +283,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
