--- a/02_Ch_3_Inner_Products_and_Norms/046-color_compression.ipynb
+++ b/02_Ch_3_Inner_Products_and_Norms/046-color_compression.ipynb
@@ -5,10 +5,10 @@
    "metadata": {},
    "source": [
     "---\n",
-    "title: \"Case Study: Color Compression with K-Means\"\n",
+    "title: \"3.7 Case Study: Color Compression with K-Means\"\n",
     "subject: Inner Products and Norms\n",
-    "subtitle: \n",
-    "short_title: \"Case Study: Color Compression with K-Means\"\n",
+    "subtitle: Clustering to compress images\n",
+    "short_title: \"3.7 Case Study: Color Compression with K-Means\"\n",
     "authors:\n",
     "  - name: Nikolai Matni\n",
     "    affiliations:\n",
@@ -65,7 +65,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
