--- a/03_Ch_4_Orthogonality/051-orthogonal_orthonormal_bases.ipynb
+++ b/03_Ch_4_Orthogonality/051-orthogonal_orthonormal_bases.ipynb
@@ -5,10 +5,10 @@
    "metadata": {},
    "source": [
     "---\n",
-    "title: Orthogonal and Orthonormal Bases\n",
+    "title: 4.1 Orthogonal and Orthonormal Bases\n",
     "subject: Orthogonality\n",
-    "subtitle: \n",
-    "short_title: Orthogonal and Orthonormal Bases\n",
+    "subtitle: Orthogonal bases make computing easy\n",
+    "short_title: 4.1 Orthogonal and Orthonormal Bases\n",
     "authors:\n",
     "  - name: Nikolai Matni\n",
     "    affiliations:\n",
@@ -375,7 +375,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
