--- a/03_Ch_4_Orthogonality/052-gram_schmidt.ipynb
+++ b/03_Ch_4_Orthogonality/052-gram_schmidt.ipynb
@@ -5,10 +5,10 @@
    "metadata": {},
    "source": [
     "---\n",
-    "title: The Gram-Schmidt Process\n",
+    "title: 4.2 The Gram-Schmidt Process\n",
     "subject: Orthogonality\n",
-    "subtitle: \n",
-    "short_title: The Gram-Schmidt Process\n",
+    "subtitle: How to \"orthgonalize\" a basis\n",
+    "short_title: 4.2 The Gram-Schmidt Process\n",
     "authors:\n",
     "  - name: Nikolai Matni\n",
     "    affiliations:\n",
@@ -257,7 +257,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
