--- a/03_Ch_4_Orthogonality/053-orthogonal_matrices.ipynb
+++ b/03_Ch_4_Orthogonality/053-orthogonal_matrices.ipynb
@@ -5,10 +5,10 @@
    "metadata": {},
    "source": [
     "---\n",
-    "title: Orthogonal Matrices and QR Factorization\n",
+    "title: 4.3 Orthogonal Matrices and the QR Factorization\n",
     "subject:  Orthogonality\n",
-    "subtitle: \n",
-    "short_title: Orthogonal Matrices and QR Factorization\n",
+    "subtitle: A new matrix factorization\n",
+    "short_title: 4.3 Orthogonal Matrices and the QR Factorization\n",
     "authors:\n",
     "  - name: Nikolai Matni\n",
     "    affiliations:\n",
@@ -519,7 +519,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
