--- a/00_Ch_1_Linear_Algebraic_Systems/021-linsys-gauss.ipynb
+++ b/00_Ch_1_Linear_Algebraic_Systems/021-linsys-gauss.ipynb
@@ -61,7 +61,7 @@
     "## Learning Objectives\n",
     "\n",
     "By the end of this page, you should know:\n",
-    "- what a linear equation is, how to identify one, and how they combine to form a system of linear equations (or linear system)\n",
+    "- what a linear equation is, how to identify one, and how they combine to form a system of linear equations (also called a linear system)\n",
     "- what a solution set is, and the kinds of solution sets a linear system can have\n",
     "- how to solve _most_ small systems of linear equations by hand using _Gaussian Elimination_"
    ]
@@ -141,7 +141,14 @@
    },
    "source": [
     "## Solving Linear Systems\n",
-    "To illustrate, let's start with the system of three linear equations we introduced above:\n",
+    "We start with a simple observation: we know how to solve equations that look like\n",
+    "$$\n",
+    "\\frac{5}{2}x_1 = 6, \\ 5-x_3 = 12, \\ 1 + 3x_2 = -4.\n",
+    "$$\n",
+    "These equations are ``easy'' to solve because they only involved one unknown, that we can solve for using simple algebra.  Our strategy will be to develop a systematic way of reducing linear systems, like the example [](#simple-linsys00) above, into an _equivalent system of equations_ that are easy to solve.\n",
+    "\n",
+    "\n",
+    "To illustrate, let's start with the system of three linear equations [](#simple-linsys00) we introduced above:\n",
     "\\begin{eqnarray}\n",
     "\\label{simple-linsys}\n",
     "x_1+2x_2+x_3 & = 2,\\\\\n",
@@ -199,7 +206,7 @@
     "x_1=-3, \\quad x_2=2, \\quad x_3=1.\n",
     "$$\n",
     "\n",
-    "Even more exciting is that recalling [](#linop1), we know that the triangular system [](#simple-linsys2) is equivalent to our original system [](#simple-linsys), which means that this is also the solution to our original system of equations (you can check).  We note that in this case, system [](#simple-linsys) has a unique, meaning one and only one, solution.  We'll understand why this is the case later in the semester.\n",
+    "Even more exciting is that recalling [](#linop1), we know that the triangular system [](#simple-linsys2) is equivalent to our original system [](#simple-linsys), which means that this is also the solution to our original system of equations (you can check).  We note that in this case, system [](#simple-linsys) has a _unique_, meaning one and only one, solution.  We'll understand why this is the case later in the semester.\n",
     "\n",
     "This process was incredibly simple and intuitive: add equations together to eliminate ``downstairs'' variables until you have found an equivalent triangular system, which can then be readily solved via back substitution.  Amazingly, barring a few minor complications that can come up from time to time, this is essentially all there is to _Gaussian Elimination_.  This incredibly simple algorithm is also unbelievably important and powerful.  After a brief detour to remind ourselves about matrix and vector notation, we'll revisit Gaussian Elimination through the lens of _matrix factorization_, which will allow us to easily automate and scale out these ideas to systems with hundreds or even thousands of variables. "
    ]
