--- a/01-howto.ipynb
+++ b/01-howto.ipynb
@@ -199,6 +199,10 @@
     "It can some times take a little while for the external server to initalize, but once it's set up, things run quickly.\n",
     "```\n",
     "\n",
+    "```{tip}\n",
+    "Also, for those of you who are a bit more familir with Python notebooks, you can download any of these pages using the link at the top of the page and run them locally within Jupyter Labs.  If you would like to have the same \"pretty\" formatting as the online notes, simply pip install [jupyterlab-myst](https://github.com/executablebooks/jupyterlab-myst) in your environment.\n",
+    "```\n",
+    "\n",
     "[^code-note]: Note that sometimes the code will look a little bit different in the notebook.  That's because we sometimes hide code that's just needed for setup in the main notes.\n",
     "\n",
     "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=01-howto.ipynb)"
@@ -345,7 +349,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
