--- a/00_Ch_1_Linear_Algebraic_Systems/022-linsys-matvec.ipynb
+++ b/00_Ch_1_Linear_Algebraic_Systems/022-linsys-matvec.ipynb
@@ -728,7 +728,15 @@
     "1 & 1 & 4 \\end{bmatrix}, \\quad \\vv x = \\begin{bmatrix} x_1 \\\\ x_2 \\\\ x_3 \\end{bmatrix}, \\quad \\vv b = \\begin{bmatrix} 2 \\\\ 7 \\\\ 3 \\end{bmatrix}.\n",
     "$$\n",
     "\n",
-    "If a variable doesn't appear in an equation, then the corresponding matrix entry is 0.\n"
+    "An important observatoion is that if a variable doesn't appear in an equation, then the corresponding matrix entry is 0.  For example, the following (admittedly silly) system of 2 equations in 2 unknowns\n",
+    "\\begin{eqnarray}\n",
+    "x + y &= 2\\\\\n",
+    "y & = 1\n",
+    "\\end{eqnarray}\n",
+    "becomes\n",
+    "\\begin{equation}\n",
+    "\\begin{bmatrix} 1 & 1 \\\\ 0 & 1 \\end{bmatrix}\\begin{bmatrix} x \\\\ y \\end{bmatrix} = \\begin{bmatrix} 2 \\\\ 1\\end{bmatrix}.\n",
+    "\\end{equation}\n"
    ]
   },
   {
