--- a/00_Ch_1_Linear_Algebraic_Systems/023a-linsys-LU.ipynb
+++ b/00_Ch_1_Linear_Algebraic_Systems/023a-linsys-LU.ipynb
@@ -15,7 +15,7 @@
     "title: 1.5 LU-Factorization\n",
     "subject:  Linear Algebraic Systems\n",
     "subtitle: A new matrix factorization\n",
-    "short_title: 1.5 U-Factorization\n",
+    "short_title: 1.5 LU-Factorization\n",
     "authors:\n",
     "  - name: Nikolai Matni\n",
     "    affiliations:\n",
