fundamental subspaces worked example (oops i forgot to do this earlier)

--- a/01_Ch_2_Vector_Spaces_and_Bases/036-adj.ipynb
+++ b/01_Ch_2_Vector_Spaces_and_Bases/036-adj.ipynb
@@ -209,9 +209,108 @@
     "It is called the left null space of $A$ because LNull$(A)$ is composed of row vectors $\\vv w^{\\top}$ that satisfy $\\vv w^{\\top} A = \\vv 0^{\\top}$.\n",
     "\n",
     "\n",
-    ":::{prf:example} TO DO\n",
+    ":::{prf:example} Finding the kernel, image, cokernel, and coimage of a $3\\times 4$ matrix\n",
     ":label:alls_eg\n",
-    "Single example for Col$(A)$, Null$(A)$, Row$(A)$, LNull$(A)$, and corresponding NumPy code.\n",
+    "\n",
+    "Consider the $3\\times 4$ matrix:\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    A = \\bm \n",
+    "        1 & 5 & -2 & 2 \\\\\n",
+    "        0 & 1 & 2 & -5 \\\\\n",
+    "        1 & 3 & -3 & 7\n",
+    "    \\em\n",
+    "\\end{align*}\n",
+    "\n",
+    "Let's find its four fundamental subspaces (i.e., give bases for these subspaces), using hand and via the ``sympy`` Python package (it's also straightforward to do this in ``numpy``).\n",
+    "\n",
+    "**Finding the nullspace/kernel.** The nullspace is the solution to the homogenous system:\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    A \\vv x = \\bm \n",
+    "        1 & 5 & -2 & 2 \\\\\n",
+    "        0 & 1 & 2 & -5 \\\\\n",
+    "        1 & 3 & -3 & 7\n",
+    "    \\em \\vv x = \\vv 0.\n",
+    "\\end{align*}\n",
+    "\n",
+    "We apply the usual method of Gauss-Jordan elimination to find a reduced row echelon form of $A$, given by the equivalent augmented matrix:\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\left[\\begin{array}{cccc|c}\n",
+    "        1 & 0 & 0 & 7 & 0 \\\\\n",
+    "        0 & 1 & 0 & -5/3 & 0 \\\\\n",
+    "        0 & 0 & 1 & -5/3 & 0\n",
+    "    \\end{array}\\right].\n",
+    "\\end{align*}\n",
+    "\n",
+    "which has basic variables $\\vv{x_1}, \\vv{x_2}, \\vv{x_3}$ and free variable $\\vv{x_4}$. The number of free variables, 1, is the dimension of the kernel. Solving this, we get:\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\vv{x_1} = -7 \\vv{x_4}, \\quad \\vv{x_2} = \\frac 5 3 \\vv{x_4}, \\quad \\vv{x_3} = \\frac 5 3 \\vv{x_4}.\n",
+    "\\end{align*}\n",
+    "\n",
+    "meaning that a basis for the kernel is given by $\\left\\{ \\bm -7 \\\\ 5/3 \\\\ 5/3 \\\\ 1 \\em \\right\\}$.\n",
+    "\n",
+    "**Finding the columnspace/image.** To find a basis for the image of $A$, we perform Gaussian elimination on $A^\\top = \\left[\\begin{array}{ccc}\n",
+    "        1 & 0 & 1 \\\\\n",
+    "        5 & 1 & 3 \\\\\n",
+    "        -2 & 2 & -3\\\\\n",
+    "        2 & -5 & 7\n",
+    "\\end{array}\\right]$. To gain an initial intuition for this procedure, note that performing *row operations* on $A^\\top$ is equivalent to performing *column operations*, which preserve the columnspace of $A$, on $A$. We get the equivalent matrix:\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\bm\n",
+    "    1 & 0 & 1 \\\\\n",
+    "    0 & 1 & -2 \\\\\n",
+    "    0 & 0 & 3\\\\\n",
+    "    0 & 0 & 0\n",
+    "\\em.\n",
+    "\\end{align*}\n",
+    "\n",
+    "A basis for $\\text{Col}(A)$ is given by $\\left\\{ \\bm 1\\\\0\\\\1\\em, \\bm 0\\\\1\\\\-2\\em, \\bm 0\\\\0\\\\3\\em\\right\\}$. To see why, we know that:\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\text{span} \\left\\{ \\bm 1\\\\0\\\\1\\em, \\bm 0\\\\1\\\\-2\\em, \\bm 0\\\\0\\\\3\\em \\right\\} = \\text{Col}(A)\n",
+    "\\end{align*}\n",
+    "\n",
+    "simply because column operations on $A$ preserve its columnspace. Furthermore, its clear that these three vectors are linearly independent. These two facts together imply that this set is a basis for $\\text{Col}(A)$.\n",
+    "\n",
+    "**Finding the left nullspace/cokernel.** The left nullspace is the solution to the homogenous system:\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    A^\\top \\vv y = \\bm \n",
+    "        1 & 0 & 1 \\\\\n",
+    "        5 & 1 & 3 \\\\\n",
+    "        -2 & 2 & -3\\\\\n",
+    "        2 & -5 & 7\n",
+    "    \\em \\vv y = \\vv 0.\n",
+    "\\end{align*}\n",
+    "\n",
+    "We apply the usual method of Gauss-Jordan elimination to find a reduced row echelon form of the augmented matrix, given by the equivalent augmented matrix:\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\left[\\begin{array}{ccc|c}\n",
+    "        1 & 0 & 0 & 0 \\\\\n",
+    "        0 & 1 & 0 & 0 \\\\\n",
+    "        0 & 0 & 1 & 0\\\\\n",
+    "        0 & 0 & 0 & 0\n",
+    "    \\end{array}\\right].\n",
+    "\\end{align*}\n",
+    "\n",
+    "which has basic variables $\\vv{y_1}, \\vv{y_2}, \\vv{y_3}$, and no free variables, meaning that the left nullspace of $A$ is trivial, $\\text{LNull}(A) = \\{\\vv 0\\}$.\n",
+    "\n",
+    "**Finding the rowspace/coimage.** To find a basis for the rowspace of $A$, we perform Gaussian elimination on $A$, and get the equivalent matrix:\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\bm\n",
+    "    1 & 5 & -2 & 2 \\\\\n",
+    "    0 & 1 & 2 & -5 \\\\\n",
+    "    0 & 0 & 3 & -5\n",
+    "\\em.\n",
+    "\\end{align*}\n",
+    "\n",
+    "And hence a basis for $\\text{Row}(A)$ is given by $\\left\\{ \\bm 1\\\\5\\\\-2\\\\2\\em, \\bm 0\\\\1\\\\2\\\\-5\\em, \\bm 0\\\\0\\\\3\\\\-5\\em\\right\\}$.\n",
     ":::"
    ]
   },
@@ -266,10 +365,6 @@
    "source": [
     "## Find the four fundamental subspaces of a matrix\n",
     "from sympy import *\n",
-    "\n",
-    "# A = Matrix([[0, -2, 1],\n",
-    "#             [0, -4, 2],\n",
-    "#             [1, -2, 1]])\n",
     "\n",
     "A = Matrix([[1, 5, -2, 2],\n",
     "            [0, 1, 2, -5],\n",
