--- a/06_Ch_7_Eigenvalues/081-eigenvalues_eigenvectors.ipynb
+++ b/06_Ch_7_Eigenvalues/081-eigenvalues_eigenvectors.ipynb
@@ -75,7 +75,7 @@
     "\n",
     "We'll first consider an easier problem.\n",
     "\n",
-    "Suppose we already know that $A$ has an eigenvalue $\\lambda$. Then, (EIG) is a linear system in $\\vv v$. Indeed, to find the eigenvectors corresponding to $\\lambda$, we just solve the homogenous linear system $(A - \\lambda I)\\vv v = \\vv 0$. We've already seen that the solution set is precisely the null space of $A - \\lambda i$, i.e., $(A - \\lambda I) = \\vv 0$ if and only if $\\vv v \\in \\text{null}(A - \\lambda I)$. \n",
+    "Suppose we already know that $A$ has an eigenvalue $\\lambda$. Then, (EIG) is a linear system in $\\vv v$. Indeed, to find the eigenvectors corresponding to $\\lambda$, we just solve the homogenous linear system $(A - \\lambda I)\\vv v = \\vv 0$. We've already seen that the solution set is precisely the null space of $A - \\lambda i$, i.e., $(A - \\lambda I) = \\vv 0$ if and only if $\\vv v \\in \\text{Null}(A - \\lambda I)$. \n",
     "\n",
     "## ... But how do we find the eigenvalues?\n",
     "\n",
