finding eigenvectors worked exercise

--- a/06_Ch_7_Eigenvalues/081-eigenvalues_eigenvectors.ipynb
+++ b/06_Ch_7_Eigenvalues/081-eigenvalues_eigenvectors.ipynb
@@ -77,6 +77,39 @@
     "\n",
     "Suppose we already know that $A$ has an eigenvalue $\\lambda$. Then, (EIG) is a linear system in $\\vv v$. Indeed, to find the eigenvectors corresponding to $\\lambda$, we just solve the homogenous linear system $(A - \\lambda I)\\vv v = \\vv 0$. We've already seen that the solution set is precisely the null space of $A - \\lambda i$, i.e., $(A - \\lambda I) = \\vv 0$ if and only if $\\vv v \\in \\text{Null}(A - \\lambda I)$. \n",
     "\n",
+    "````{exercise}  Finding eigenvectors\n",
+    ":label: eigen-ex1\n",
+    "\n",
+    "Given that $\\lambda = 3$ is an eigenvalue of $\\bm -1 & -1 & 1 \\\\ -4 & -1 & -2 \\\\ 0 & 0 & -3 \\em$, find its corresponding eigenvectors.\n",
+    "\n",
+    "```{solution} eigen-ex1\n",
+    ":class: dropdown\n",
+    "\n",
+    "To find the corresponding eigenvectors, we solve the homogenous system:\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\bm -1 & -1 & 1 \\\\ -4 & -1 & -2 \\\\ 0 & 0 & -3 \\em - (-3)I = \\bm 2&-1&1\\\\-4&2&-2\\\\0&0&0 \\em = \\vv 0.\n",
+    "\\end{align*}\n",
+    "\n",
+    "After forming the augmented matrix and putting it in row echelon form, we get the equivalent system:\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\left[\\begin{array}{ccc|c}\n",
+    "        2&-1&1 &0\\\\\n",
+    "        0&0&0 &0\\\\\n",
+    "        0&0&0 &0\n",
+    "    \\end{array}\\right]\n",
+    "\\end{align*}\n",
+    "\n",
+    "which has solution set given by (and hence the eigenvectors corresponding to an eigenvalue of $3$ are given by):\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\text{span}\\left\\{ \\bm 1/2\\\\1\\\\0\\em, \\bm -1/2\\\\0\\\\1 \\em \\right\\}.\n",
+    "\\end{align*}\n",
+    "\n",
+    "```\n",
+    "````\n",
+    "\n",
     "## ... But how do we find the eigenvalues?\n",
     "\n",
     "The question, now, becomes how to find the eigenvalues of a matrix. A key observation is that the [definition of eigenvalue](#eigen-defn) require that the corresponding eigenvector be *nonzero*, and we know that this can only occur if $A - \\lambda I$ is singular! This discussion is summarized in the following theorem:\n",
