fixes to 022 and 023

--- a/00_Ch_1_Linear_Algebraic_Systems/022-linsys-matvec.ipynb
+++ b/00_Ch_1_Linear_Algebraic_Systems/022-linsys-matvec.ipynb
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 32,
    "id": "dce266e0-5211-4d76-98db-aa1215562d0e",
    "metadata": {},
    "outputs": [
@@ -490,12 +490,11 @@
       " [[2 7 0]\n",
       " [2 4 1]] \n",
       "Bx: \n",
-      " [[60]\n",
-      " [22]] \n",
+      " [60 22] \n",
       "yB: \n",
-      " [[ 2 10 -1]] \n",
+      " [ 2 10 -1] \n",
       "yBx: \n",
-      " [[104]]\n"
+      " 104\n"
      ]
     }
    ],
@@ -505,18 +504,24 @@
     "              [1, 0]])\n",
     "B = np.array([[2, 4, 1],\n",
     "              [0, 3, -1]])\n",
-    "x = np.array([[13],\n",
-    "              [8],\n",
-    "              [2]])\n",
-    "y = np.array([[1, 2]])\n",
-    "\n",
-    "\n",
+    "x = np.array([13, 8, 2])\n",
+    "y = np.array([1, 2])\n",
     "\n",
     "a_r = A@B\n",
     "b_r = B@x\n",
     "c_r = y@B\n",
     "c_r1 = y@B@x\n",
     "print(\"\\nAB: \\n\", a_r, \"\\nBx: \\n\", b_r, \"\\nyB: \\n\", c_r, \"\\nyBx: \\n\", c_r1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b206d244-c6de-45b2-b9d7-3d791112cfba",
+   "metadata": {},
+   "source": [
+    "```{warning}\n",
+    "NumPy has some quirks when it comes to column and row vectors: 1-d vectors like `x` and `y` in the example above can behave as either a row vector (as in `y @ B`) or a column vector (as in `B @ x`) depending on how you use them.  Without getting into too much detail as to why, this ends up being much more convenient than treating column vectors as $n \\times 1$ arrays and row vectors as $1 \\times n$ arrays.  Instead, they are just arrays of dimension $n$.  This is just one of those \"rough edges\" of NumPy that you have to get comfortable with!\n",
+    "```"
    ]
   },
   {
