--- a/00_Ch_1_Linear_Algebraic_Systems/023-linsys-gauss.ipynb
+++ b/00_Ch_1_Linear_Algebraic_Systems/023-linsys-gauss.ipynb
@@ -59,14 +59,14 @@
     "## Learning Objectives\n",
     "\n",
     "By the end of this page, you should know:\n",
-    "- Gaussian elimination for regular matrices using matrix representation\n",
-    "- what are pivots in a matrix\n",
-    "- algorithm to solve linear equations using Gaussian elimination and back substitution"
+    "- how to use Gaussian elimination to solve linear systems $A\\vv x = \\vv b$ when $A$ is a regular matrix\n",
+    "- what pivots in a matrix are\n",
+    "- algorithms to solve _large_ systems of linear equations using Gaussian elimination and back substitution"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ebd6aeff-4ad9-42b7-9fb4-a82ada3e07b6",
+   "id": "d879682d-4501-4189-8832-9889262efa99",
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -101,7 +101,7 @@
     "Adding a scalar multiple of one row of the augmented matrix to another row is the equivalent of adding a multiple of one equation to another in the system of linear equations it defines.  As such, this does not change the solution set and leads to an equivalent augmented matrix.\n",
     "```\n",
     "\n",
-    "For example, when solving [example system](./021-linsys-gauss.ipynb#simple-linsys), our first step was to subtract two times the first equation from the second.  This is equivalently done by subtracting two times the first row of the augmented matrix [](#augmat-ex) from the second row:\n",
+    "For example, when solving our [example system](./021-linsys-gauss.ipynb#simple-linsys), our first step was to subtract two times the first equation from the second.  This is equivalently done by subtracting two times the first row of the augmented matrix [](#augmat-ex) from the second row:\n",
     "$$\n",
     "-2\\bm 1 & 2 & 1 & 2 \\em + \\bm 2 & 6 & 1 & 7 \\em = \\bm 0 & 2 & -1 & 3\\em.\n",
     "$$\n",
@@ -137,9 +137,9 @@
     "\n",
     "[^upper]: It's convention we used the symbol $U$ to remind ourselves that the matrix is upper triangular.\n",
     "\n",
-    "What we just described is an algorithm for solving a linear system of $n$ equations in $n$ unknowns, and is known as _regular Gaussian Elimination_.  We'll call a square matrix $A$ _regular_ if the algorithm successfully reduces it to the upper triangular form $U$ with all nonzero pivots on the diagonal.  If this fails to happen, i.e., if a pivot appearing on the diagonal is zero, then the matrix is not regular.  We then use the pivot row to make all entries lying in the column below the pivot equal to zero through elementary row operations.  The solution is then found by applying Back Substitution to the resulting system.  We'll summarize both of these algorithms in _pseudocode_ below.  Later, we'll see how to translate this pseudocode into actual Python code that can be run on a computer.\n",
+    "What we just described is an algorithm for solving a linear system of $n$ equations in $n$ unknowns, and is known as _regular Gaussian Elimination_.  We'll call a square matrix $A$ _regular_ if the algorithm successfully reduces it to the upper triangular form $U$ with all nonzero pivots on the diagonal.  If this fails to happen, i.e., if a pivot appearing on the diagonal is zero, then the matrix is not regular.  We then use the pivot row to make all entries lying in the column below the pivot equal to zero through elementary row operations.  The solution is then found by applying Back Substitution to the resulting system.  We present both of these algorithms in _pseudocode_ and _python code_ below.\n",
     "\n",
-    ":::{prf:algorithm} Regular Gaussian Elimination\n",
+    ":::{prf:algorithm} Regular Gaussian Elimination (Pseudo-code)\n",
     ":label: reg-ge\n",
     "\n",
     "**Inputs** Augmented matrix $M = [ A \\, | \\, \\vv b]$\n",
@@ -154,8 +154,112 @@
     "$\\quad \\quad$ add $-l_{ij}$ times row $j$ of $M$ to row $i$ of $M$\\\n",
     "**return** $M = [U \\, | \\, \\vv c]$ \n",
     ":::\n",
-    "Here we use what are called _in place updates_, meaning that the same letter $M$ (with entries $m_{ij}$) denotes the current augmented matrix at each stage in the computation.  We initialize with $M=[A \\, | \\, \\vv b]$, and output (assuming $A$ is regular) the upper triangular equivalent augmented matrix $M = [U \\, | \\, \\vv c]$, where $U$ is the upper triangular matrix with diagonal entries the pivots, and $\\vv c$ is the resulting vector of the right-hand sides of the triangular system $U\\vv x = \\vv c$.\n",
+    "Here we use what are called _in place updates_, meaning that the same letter $M$ (with entries $m_{ij}$) denotes the current augmented matrix at each stage in the computation.  We initialize with $M=[A \\, | \\, \\vv b]$, and output (assuming $A$ is regular) the upper triangular equivalent augmented matrix $M = [U \\, | \\, \\vv c]$, where $U$ is the upper triangular matrix with diagonal entries the pivots, and $\\vv c$ is the resulting vector of the right-hand sides of the triangular system $U\\vv x = \\vv c$.  \n",
     "\n",
+    "Here's what this looks like implemented as a function in NumPy.  You should be able to map the code below to the pseudo-code above."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "ec362be8-2692-4fd1-94f8-aa9410c2eaa5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1.   2.   1.   2. ]\n",
+      " [ 0.   2.  -1.   3. ]\n",
+      " [ 0.   0.   2.5  2.5]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def GaussElim(A, b):\n",
+    "    n = A.shape[0] # number of rows of A = number of equations\n",
+    "    M = np.hstack((A, b.reshape((n,1)))) # build the augmented matrix by horizontally stacking A and b.\n",
+    "    \n",
+    "    # Gaussian elimination\n",
+    "    for j in range(n):\n",
+    "        if M[j, j] == 0:\n",
+    "            print(\"A is not regular\")\n",
+    "            break\n",
+    "        else:\n",
+    "            for i in range(j+1, n):\n",
+    "                scalar = M[i, j]/M[j, j]\n",
+    "                M[i, :] = M[i, :] - scalar*M[j, :]\n",
+    "    \n",
+    "    # return the matrix M = [U | c] in upper triangular form\n",
+    "    return M        \n",
+    "\n",
+    "# Let's test our function\n",
+    "A = np.array([[1., 2., 1.],\n",
+    "              [2., 6., 1.],\n",
+    "              [1., 1., 4.]])\n",
+    "\n",
+    "b = np.array([2, 7, 3])\n",
+    "\n",
+    "M = GaussElim(A,b)\n",
+    "print(M)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c21af857-c884-4756-99a7-a3a38387fa64",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
+   "source": [
+    "```{caution}\n",
+    "You might be wondering we we added periods at the end of each number when we defined `A` and `b`.  This is to tell Python that we want the numbers to be treated as _floats_ rather than _integers_.  This hasn't been an issue up until now because we haven't implemented code that involves division.  If we did not put those periods at the end, Python would round every operation to the nearest integer, because it assumes this is what we wanted.  This can lead to unexpected results and _very tough to catch bugs_.\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "b8fdcb1e-e68c-47aa-817f-a8924e21f4a6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.  0.  0.  0. ]\n",
+      " [0.  0.  0.  0. ]\n",
+      " [0.  0.  0.5 0.5]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# The importance of a period!\n",
+    "Aint = np.array([[1, 2, 1],\n",
+    "              [2, 6, 1],\n",
+    "              [1, 1, 4]])\n",
+    "bint = np.array([2, 7, 3])\n",
+    "\n",
+    "newM = GaussElim(Aint,bint)\n",
+    "print(M-newM) # these are different!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3992c339-2048-4cf5-bfd1-de4315ab2d82",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
+   "source": [
     "Next, let's take a look at the pseudocode for Back Substitution.\n",
     ":::{prf:algorithm} Back Substitution\n",
     ":label: back-sub\n",
@@ -167,7 +271,78 @@
     "set $x_n\\leftarrow c_n/u_{nn}$\\\n",
     "for $i=n-1$ to $1$: (decrementing by $-1$ at each iteration)\\\n",
     "$\\quad$ set $x_i \\leftarrow \\frac{1}{u_{ii}}\\left(c_i-\\displaystyle\\sum_{j=i+1}^{n}u_{ij}x_j\\right)$\\\n",
-    "**return** solution $\\vv x$"
+    "**return** solution $\\vv x$\n",
+    ":::\n",
+    "\n",
+    "Here's what this looks like implemented as a function in NumPy.  You should be able to map the code below to the pseudo-code above."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "c2434708-ed5b-4978-ac3f-160ba1aed508",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-3.  2.  1.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def back_substitution(M):\n",
+    "    # We assume M = [U|c] has U in upper triangular form\n",
+    "    # Better software engineering practices would call for us to check this before proceeding but we\n",
+    "    # focus on the math here\n",
+    "    \n",
+    "    n = M.shape[0] # number of rows of M = number of equations = number of unknowns for square A\n",
+    "    x = np.zeros((n,)) # set up an all zeros array x to be populated with the solution\n",
+    "    \n",
+    "    x[n-1] = M[n-1, -1]/M[n-1, n-1] # -1 is the last index of the particular axis in a python array\n",
+    "    for i in range(n-2, -1, -1): # range(a, b, c) returns the list [a, a+c ,a+2c, ..., b] \n",
+    "        x[i] = (M[i, -1] - np.sum(M[i, i+1:-1]*x[i+1:]))/M[i, i] # * is elementwise multiplication of arrays\n",
+    "    \n",
+    "    return x\n",
+    "\n",
+    "# Let's test out our code using M from above: it gives us the right answer!\n",
+    "x = back_substitution(M)\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ab3be385-f5ed-45b4-9f2e-2962f7a445f0",
+   "metadata": {},
+   "source": [
+    "Now let's put the two functions together to define a `solve` function that takes in a matrix `A` and a right hand side `b` and returns a solution `x` such that `A@x = b`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "10c86335-9671-42ea-b6d8-414db64ad71c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x = [-3.  2.  1.]\n",
+      " A @ x - b = [0. 0. 0.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def solve(A,b):\n",
+    "    M = GaussElim(A,b)\n",
+    "    x = back_substitution(M)\n",
+    "    return x\n",
+    "\n",
+    "x = solve(A,b)\n",
+    "\n",
+    "print(f'x = {x}\\n A @ x - b = {A @ x - b}')\n"
    ]
   },
   {
@@ -294,94 +469,94 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c06384a9-2a26-4a0e-a471-f775acb51176",
+   "metadata": {},
+   "source": [
+    "## Solving big systems of linear equations\n",
+    "The code that we wrote above works equally well when we have 1000 equations in 1000 unknowns (or more!).  The code below generates a random `A` and `b` of size 1000 x 1000 and 1000 x 1, respectively, and solves for a 1000 x 1 solution `x` satisfying `A @ x = b`.  Compare how long our code takes to solve this problem and the built in function from NumPy [`np.linalg.solve`](https://numpy.org/doc/stable/reference/generated/numpy.linalg.solve.html).\n",
+    "\n",
+    "If you want to play around with this, launch the interactive notebook and see how big of a system you can solve before it takes too long or you run out of memory!"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "dd1614ee-8355-4170-8d8e-02128fc97969",
+   "execution_count": 24,
+   "id": "7a2401dc-1925-4c58-91cf-4c34cdc6def1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Gaussian elimination and back substitution\n",
+    "# Setup a large random system of equation Ax = b\n",
+    "n = 1000 # number of equations and unknowns\n",
     "\n",
-    "import numpy as np\n",
-    "\n",
-    "def GaussElem(A, b):\n",
-    "    M = np.hstack((A, b))\n",
-    "    \n",
-    "    n = A.shape[0] # number of rows of A = number of equations\n",
-    "    \n",
-    "    # Gaussian elimination\n",
-    "    for j in range(n):\n",
-    "        if M[j, j] == 0:\n",
-    "            print(\"A is not regular\")\n",
-    "            break\n",
-    "        else:\n",
-    "            for i in range(j+1, n):\n",
-    "                scalar = M[i, j]/M[j, j]\n",
-    "                M[i, :] = M[i, :] - scalar*M[j, :]\n",
-    "\n",
-    "    # back substitution\n",
-    "    x = np.zeros((n,))\n",
-    "\n",
-    "    x[n-1] = M[n-1, -1]/M[n-1, n-1] # -1 is the last index of the particular axis in a python array\n",
-    "    for i in range(n-2, -1, -1): # range(a, b, c) returns the list [a, a+c ,a+2c, ..., b] \n",
-    "        x[i] = (M[i, -1] - np.sum(M[i, i+1:-1]*x[i+1:]))/M[i, i] # * is elementwise multiplication of arrays\n",
-    "    \n",
-    "    return x"
+    "# Generate random A and b of size (n,n) and (n,1)\n",
+    "A_big = np.eye(n) + np.random.randn(n,n)\n",
+    "b_big = np.random.randn(n)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "c193094b-cd70-4f6f-ace4-4ebf51a078d6",
+   "execution_count": 25,
+   "id": "1c518e05-9527-4012-89b0-485699e1ce01",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([-3.,  2.,  1.])"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.564420619246334e-09\n"
+     ]
     }
    ],
    "source": [
-    "A = np.array([[1, 2, 1],\n",
-    "              [2, 6, 1],\n",
-    "              [1, 1, 4]])\n",
-    "b = np.array([[2],\n",
-    "              [7],\n",
-    "              [3]])\n",
+    "# solve linear system of equations Ax=b using our homebrewed solution\n",
+    "x = solve(A_big, b_big)\n",
     "\n",
-    "x = GaussElem(A, b)\n",
-    "x"
+    "# print max absolute value of Ax - b\n",
+    "print(np.max(np.abs(A_big @ x - b_big)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "7a2401dc-1925-4c58-91cf-4c34cdc6def1",
+   "execution_count": 26,
+   "id": "63ac41bc-38dc-4b74-8303-8b3521d9b566",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[-3.],\n",
-       "       [ 2.],\n",
-       "       [ 1.]])"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.06916714265526e-11\n"
+     ]
     }
    ],
    "source": [
-    "# solve linear system of equations Ax=b using NumPy's inbuilt function\n",
+    "# compare to using NumPy's built in function\n",
+    "x_np = np.linalg.solve(A_big, b_big)\n",
     "\n",
-    "x_numpy = np.linalg.solve(A, b) \n",
-    "x_numpy"
+    "# print max absolute value of Ax - b\n",
+    "print(np.max(np.abs(A_big @ x_np - b_big)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "acec56cf-cd3b-49d9-a9c1-0359a121f3a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "805 ms ± 4.06 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
+      "9.83 ms ± 641 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# use some python magic to compare timing: which should you use in practice?!\n",
+    "%timeit solve(A_big, b_big)\n",
+    "%timeit np.linalg.solve(A_big, b_big)"
    ]
   },
   {
